# FHIRPathMappingLanguage

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: github-actions.yml  main.yml  publish-dockerhub.yml  publish-pypi.yml  publish.yml  test-python.yml  test-ts.yml
examples/: fhirmapping.map  fhirpathmap.json
examples/python/: bs_repeatable.py  pydian_repeatable.py  pyproject.toml
examples/repeatable/: PatientTelecom.fume  fhirmapping.map  fhirpathmap.json  jute.yaml  qr.json  result.json
examples/simple/: fhirmapping.map  qr.json
python/: .gitignore  Pipfile  README.md  bs_repeatable.py  pydian_repeatable.py  pyproject.toml  resources.py
python/fpml/: __init__.py
python/fpml/core/: constants.py  core_exceptions.py  core_types.py  exceptions.py  extract.py  guarded_resource.py  types.py  utils.py
python/src/fhirpath-mapping-language/utils/: __init__.py  extract.py  types.py
python/tests/: conftest.py
python/tests/core/: fixtures  test_attachment.py  test_complex_example_aidbox.py  test_complex_example_fhir.py  test_extract.py
server/.github/workflows/: github-actions.yml
server/src/: app.controller.ts  app.service.ts  main.ts
server/src/utils/: extract.spec.ts  extract.ts
server/test/: app.e2e-spec.ts
tests/__data__/: attachment.context.json  attachment.result.json  attachment.template.yaml  complex-example.aidbox.context.yaml  complex-example.aidbox.result.yaml  complex-example.aidbox.template.yaml  complex-example.fhir.context.yaml  complex-example.fhir.result.yaml  complex-example.fhir.template.yaml  complex-example.fhir.yaml
ts/server/: .eslintrc.js  .prettierrc  Dockerfile  package.json
ts/server/src/: app.controller.ts  app.filters.ts  app.service.ts  main.ts
ts/server/src/core/: attachment.spec.ts  complex-example.aidbox.spec.ts  complex-example.fhir.spec.ts  example1.fhir.spec.ts  extract.spec.ts  extract.ts
ts/server/src/utils/: __data__  complex-example.aidbox.spec.ts  complex-example.fhir.spec.ts  example1.fhir.spec.ts  extract-complex.spec.ts  extract.spec.ts  extract.ts
ts/server/src/utils/__data__/: complex-example.aidbox.yaml
ts/server/test/: app.e2e-spec.ts
