[project]
name = "fhirpath-mapping-language"
description = "The FHIRPath mapping language is a data DSL designed to convert data from QuestionnaireResponse (and not only) to any FHIR Resource."
authors = [
    {name = "Beda Software",email = "ilya@beda.software"}
]
maintainers = [
    { name = "Vadim Laletin", email = "vadim@beda.software" },
    { name = "Ilya Beda", email = "ilya@beda.software" }
]
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"
keywords = ["fhir", "fhirpath"]
dynamic = ["version", "classifiers"]
dependencies = [
]

[project.urls]
homepage = "https://github.com/beda-software/FHIRPathMappingLanguage/tree/main/python/"
repository = "https://github.com/beda-software/FHIRPathMappingLanguage/tree/main/python"
documentation = "https://github.com/beda-software/FHIRPathMappingLanguage/tree/main/python/README.md"
"Bug Tracker" = "https://github.com/beda-software/FHIRPathMappingLanguage/issues"

[tool.poetry]
version = "0.1.0"
packages = [{include = "python", from = "src"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",

]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
